<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
  	android:id="@+id/TheSplashLayout"
  	android:layout_width="fill_parent"
  	android:layout_height="fill_parent" 
  	android:layout_gravity="center"
    android:orientation="vertical"
  	>

    <ImageView 
        android:id="@+id/splash_image_view"
        android:contentDescription="@string/app_name"
        android:layout_width="fill_parent" 
        android:layout_height="wrap_content"
        android:src="@drawable/friendshare"
        android:layout_marginTop="30dp"
        />

        <TextView
        android:id="@+id/splash_text_view"
            android:text="@string/intro"
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content" 
            android:layout_marginBottom="10dip"
            android:layout_marginRight="10dip"
            android:layout_gravity="center"
            android:padding="10dip"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="18.0sp"
        />
    
        <TextView
        android:id="@+id/splash_appver_text_view"
            android:text="@string/app_version"
            android:layout_width="wrap_content" 
            android:layout_height="wrap_content" 
            android:layout_marginBottom="10dip"
            android:layout_marginRight="10dip"
            android:layout_gravity="right|bottom"
            android:padding="10dip"
            android:gravity="right"
            android:textColor="@color/black"
            android:textSize="10.0sp"
        />
            
</LinearLayout>
